# rustlang-hacking-microservice-1

./: .gitignore  LICENSE  README.md  start-mysql-docker.sh
hacking_news/: Cargo.toml  Dockerfile
hacking_news/hacking_news_app/: Cargo.toml
hacking_news/hacking_news_app/src/: main.rs
hacking_news/hacking_news_app/src/controllers/: mod.rs  news_controller.rs
hacking_news/hacking_news_app/src/services/: mod.rs  news_service.rs
hacking_news/hacking_news_domain/: Cargo.toml
hacking_news/hacking_news_domain/src/: lib.rs
hacking_news/hacking_news_infra/: Cargo.toml
hacking_news/hacking_news_infra/src/: lib.rs
hacking_news/hacking_news_migrations/: Cargo.toml
hacking_trading/: Cargo.toml
hacking_trading/hacking_trading_app/: Cargo.toml
hacking_trading/hacking_trading_domain/: Cargo.toml
hacking_trading/hacking_trading_infra/: Cargo.toml
hacking_trading/hacking_trading_migrations/: Cargo.toml
