[package]
name = "hacking_news_app"
version = "0.1.0"
authors = ["Jinliang Shi <jinliangshi@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hacking_news_domain = { path = "../hacking_news_domain" }
hacking_news_infra      = { path = "../hacking_news_infra" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44" 
actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
env_logger = "0.7.1"
log = "0.4.8"