[package]
name = "hacking_news_infra"
version = "0.1.0"
authors = ["Jinliang Shi <jinliangshi@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hacking_news_domain = { path = "../hacking_news_domain" }
postgres = "0.17.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
futures = "0.3.1"
tokio-postgres = "0.5.1"
tokio = "0.2.9"
uuid = {version="0.8.1",features=["v4"]}