[package]
name = "hacking_news_migrations"
version = "0.1.0"
authors = ["Jinliang Shi <jinliangshi@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
barrel = { version="0.6.4", features = ["pg"] }
postgres = "0.18.1"